Random sentences in the preface

--- a/FrontBackmatter/Preface.tex
+++ b/FrontBackmatter/Preface.tex
@@ -1,6 +1,22 @@
-\chapter*{Preface}
+\chapter*{Reflections on category theory}
 \markboth{\spacedlowsmallcaps{Preface}}{\spacedlowsmallcaps{Preface}}
 \addcontentsline{toc}{chapter}{\tocEntry{Preface}}
+
+
+The following is a introductory compendium to the mathematical theory of categories, with applications to non-relativistic quantum mechanics and applied functional programming. 
+
+Category theory seems to be playing an increasingly prominent role in several areas of pure and applied mathematics and, more generally, science. 
+Due to its extreme generality, it should come with no surprises that several topics can be rephrased and presented in categorical terms, it's mandatory however to challenge ourselves whether that's just a sterile exercise of purely theoretical interested, or it's something that can prove useful and provide tactical and pragmatic advantages over more traditional approaches. 
+%Personally, I don't think there's a unique and straightforward answer to this question, but 
+In stimulating this discussion, these notes contribute by offering a gallery of scattered examples where reasoning in categorical terms suggestively inspire new insightful ways to look at existing domains. 
+
+Category theory provides a conceptual and theoretical framework and language to express, recast, explore, develop, approach, and reason about ``things'' in a general manner that often allows to remove the accidental complexity, noisy ``implementation details'' and unnecessary burden of more common formalisms, letting the core aspects and essential properties emerge. 
+
+A standard approach to non-relativistic quantum mechanics --- which goes back to von Neumann --- is formulated in terms of spectral theory of linear operators in Hilbert spaces. This formalism has proven to be particularly suitable and powerful to describe and extract properties of quantum systems. (Alternative formulations include the usage of path integrals, due to R.~Feynman; such approach is definitely interesting and insighful from the physical point of view, but proves to be more useful in practice when generalising to quantum field theories.) 
+
+
+
+This is not to say that category theory is always suitable for all kind of tasks. Sometimes, in applying quantum mechanics or programming ideas to specific systems or specific code, our goal is exactly to deal with the particularities of such sustems, the nitty gritty specific details of a specific system. To my knowledge, category theory is not always the right tool to get our hands dirty when it comes to study the particular details, mostly because those are often ``invisible'' on purpuse in the categorical construction. From this point of view, I don't think category theory should be understood as a replacement of more traditional approaches. Wearing the hat of category theory however provides a complementary viewpoint where certain properties are more naturally expressed, explored, and discovered. 
 
 \smallskip
 
