--- a/category-book.tex
+++ b/category-book.tex
@@ -174,6 +174,7 @@ natbib,ibidtracker=false]{biblatex}
 \pagestyle{plain}
 \input{FrontBackmatter/Titlepage}
 \input{FrontBackmatter/Titleback}
+\input{FrontBackmatter/Dedication}
 \pagestyle{scrheadings}
 \input{FrontBackmatter/TableOfContents}
 \input{FrontBackmatter/Preface}
