--- a/FrontBackmatter/Preface.tex
+++ b/FrontBackmatter/Preface.tex
@@ -3,12 +3,14 @@
 \addcontentsline{toc}{chapter}{\tocEntry{Preface}}
 
 
-The following is a introductory compendium to the mathematical theory of categories, with applications to non-relativistic quantum mechanics and applied functional programming. 
+These notes provide an exploration of concepts and ideas in category theory, and in particular different flavours of monoidal categories, with applications to non-relativistic quantum mechanics and applied functional programming. 
 
-Category theory seems to be playing an increasingly prominent role in several areas of pure and applied mathematics and, more generally, science. 
-Due to its extreme generality, it should come with no surprises that several topics can be rephrased and presented in categorical terms, it's mandatory however to challenge ourselves whether that's just a sterile exercise of purely theoretical interested, or it's something that can prove useful and provide tactical and pragmatic advantages over more traditional approaches. 
+Category theory recently has gained prominence in several areas of pure and applied mathematics and, more generally, science. 
+Due to its extreme generality and versatility, a variety of topics can be successfully re-phrased and presented in categorical terms. 
+A question arises though, on whether that's just an exercise of purely theoretical interested, or there are compelling tactical and pragmatic advantages over more traditional approaches. 
 %Personally, I don't think there's a unique and straightforward answer to this question, but 
-In stimulating this discussion, these notes contribute by offering a gallery of scattered examples where reasoning in categorical terms suggestively inspire new insightful ways to look at existing domains. 
+In challenging and stimulating a discussion around this question, 
+these notes contribute by offering a gallery of scattered examples where reasoning in categorical terms suggestively inspire new insightful ways to look at existing domains. 
 
 Category theory provides a conceptual and theoretical framework and language to express, recast, explore, develop, approach, and reason about ``things'' in a general manner that often allows to remove the accidental complexity, noisy ``implementation details'' and unnecessary burden of more common formalisms, letting the core aspects and essential properties emerge. 
 
@@ -16,7 +18,7 @@ A standard approach to non-relativistic quantum mechanics --- which goes back to
 
 
 
-This is not to say that category theory is always suitable for all kind of tasks. Sometimes, in applying quantum mechanics or programming ideas to specific systems or specific code, our goal is exactly to deal with the particularities of such sustems, the nitty gritty specific details of a specific system. To my knowledge, category theory is not always the right tool to get our hands dirty when it comes to study the particular details, mostly because those are often ``invisible'' on purpuse in the categorical construction. From this point of view, I don't think category theory should be understood as a replacement of more traditional approaches. Wearing the hat of category theory however provides a complementary viewpoint where certain properties are more naturally expressed, explored, and discovered. 
+This is not to say that category theory is always suitable for all kind of tasks. Being a fascinating and elegant branch of mathematics, we need to learn how to resist the pressing temptation of (ab)using category theory when alternative formulations might provide a better or more effectful alternative.  Sometimes, in applying quantum mechanics or programming ideas to specific systems or specific code, our goal is exactly to deal with the particularities of such sustems, the nitty gritty specific details of a specific system. To my knowledge, category theory is not always the right tool to get our hands dirty when it comes to study the particular details, mostly because those are often ``invisible'' on purpuse in the categorical construction. From this point of view, I don't think category theory should be understood as a replacement of more traditional approaches. Wearing the hat of category theory however provides a complementary viewpoint where certain properties are more naturally expressed, explored, and discovered. 
 
 \smallskip
 
