--- a/FrontBackmatter/Titlepage.tex
+++ b/FrontBackmatter/Titlepage.tex
@@ -1,28 +1,16 @@
 \begin{titlepage}
-	\begin{addmargin}[-1cm]{-3cm}
     \begin{center}
-{
-        \large
+        \vspace*{2cm} % Push content down from the top margin
 
-        \hfill
+        % Title in uppercase and red color, styled to match Classic Thesis
+        {\color{Maroon}\spacedallcaps{\myTitle}} \\[1cm] % Reduced space after the title
 
-        \vfill
+        % Author name in small caps
+        {\spacedlowsmallcaps{\myName}}
 
-        \begingroup
-            \color{Maroon}\spacedallcaps{\myTitle} \ \bigskip
-        \endgroup
+        \vfill % Push the rest of the content to the bottom
 
-        \spacedlowsmallcaps{\myName}
-
-        \vfill
-
-\vfill
-}
-	\includegraphics[width=.9\textwidth]{cover}
-	\vspace{\stretch{5}}
-
-
-        \textsw{\myTime}
+        % Date at the very bottom
+        {\textsc{\myTime}}
     \end{center}
-  \end{addmargin}
 \end{titlepage}
