--- a/category-book.tex
+++ b/category-book.tex
@@ -1,7 +1,7 @@
 \documentclass[10pt,a4paper,footinclude=true,headinclude=true]{scrbook}
 
 \newcommand{\myName}{Alessandro Candolini}
-\newcommand{\myTitle}{Short treatise on the mathematical theory of categories}
+\newcommand{\myTitle}{Short treatise on the mathematical theory of monoidal categories}
 \newcommand{\myLocation}{London}
 \newcommand{\myTime}{\today}
 
