Refining the preface

--- a/FrontBackmatter/Preface.tex
+++ b/FrontBackmatter/Preface.tex
@@ -5,24 +5,24 @@
 
 These notes provide an exploration of concepts and ideas in category theory, with special emphasis on various flavours of monoidal categories, with applications to algebra, non-relativistic quantum mechanics, and applied functional programming. 
 
-Category theory recently has gained prominence in several areas of pure and applied mathematics, physics, and computer science. 
-Due to its extreme generality and versatility, category theory offers a unifying framework through which a wide variety of topics can be recast and understood.  
-A question arises though, on whether that's just an exercise of purely theoretical interested, or there are compelling advantages over more traditional approaches. 
-%Personally, I don't think there's a unique and straightforward answer to this question, but 
-In challenging and stimulating a discussion around this question, 
-these notes contribute by offering a gallery of domains and examples where looking through the eyeglass of category theory unlocks new ways of reasonings, provides a bird-eye view that allows to connect seemigly unrelated areas, and suggestively inspire new insightful ways to look at existing domains. 
-In fact, category theory provides a conceptual and theoretical framework and language to express, develop, and reason about abstractions and domains in a general manner that often allows to remove the accidental complexity, noisy ``implementation details'', and unnecessary burden of more traditional formalisms, letting the core aspects and essential properties emerge. 
+Category theory has recently gained prominence in several areas of pure and applied mathematics, physics, and computer science. 
+Due to its extreme generality and versatility, category theory provides a powerful unifying language through which a wide variety of topics can be recast and understood. 
+However, a question arises: is this merely an exercise in purely theoretical interest, or does it offer compelling advantages over more traditional approaches? 
+To explore and stimulate discussion around this question, these notes provide a gallery of examples illustrating how the lens of category theory can unlock new ways of reasoning, provide a bird's-eye view that connects seemingly unrelated areas, and inspire fresh and insightful perspectives on various domains. 
+While at first glance the discipline might seem impenetrable, the economy of thought it fosters can, in the long term, prove to be a rewarding investment.
+Indeed, category theory serves as a conceptual and theoretical framework for expressing, identifying, and reasoning about commonalities across disparate domains, stripping away accidental complexity, noise, ``implementation details'', and the unnecessary burden of traditional formalisms, allowing core aspects and essential properties to emerge.
 
-Consider, for instance, the operatorial formulation of non-relativistic quantum mechanics, due to von Neumann, based on the spectral theory of linear self-adjoint operators on Hilbert spaces. (Alternative formulations, such as the path integral approach introduced by R.~Feynman, offer valuable physical insights but play a more prominent role in perturbative relativistic quantum field theories.) Despite the undeniable usefulness and effectiveness of the operatorial formalism in describing and calculating properties of various quantum systems, the extraction and recognition of general results are often obfuscated behind a layer of technical details. We will see that results such as the no-cloning theorem, foundational in quantum computation and usually derived using the Cauchy-Schwarz inequality for Hilbert spaces, emerge naturally from the structural constraints of dagger compact categories.
+Consider, for instance, the operatorial formulation of non-relativistic quantum mechanics, pioneered by von Neumann and based on the spectral theory of linear self-adjoint operators on Hilbert spaces. (An alternative but equivalent formulation, the path integral approach developed by R.~Feynman, provides valuable physical insights but arguably plays a more prominent role in relativistic quantum field theories.) Despite the undeniable usefulness and effectiveness of the operatorial formalism in describing and calculating properties of various quantum systems, the language of Hilbert spaces can be overly verbose and clumsy for modeling, navigating, and characterising the general structure and universality of certain results.
+For example, the no-cloning theorem, which is commonly derived using ad hoc technical constructs such as the Cauchy--Schwarz inequality, arises trivially from the lack of Cartesian structure in dagger compact categories. 
+In categorical terms, the absence of diagonal morphisms inherently forbids the duplication of arbitrary states.
+Cartesian categories are insufficient to fully describe quantum systems and, similarly, fail to capture effectful computations (\eg, applicative or monadic programs) in strongly typed, purely functional programming languages such as Haskell.
 
-%Consider, for instance, the operatorial formulation of non-relativistic quantum mechanics --- which goes back to von Neumann --- in terms of spectral theory of linear self-adjoint operators in Hilbert spaces. This formalism has proven to be particularly suitable and powerful to describe and extract properties of quantum systems. (Alternative formulations include the usage of path integrals, due to R.~Feynman; while such approach is interesting and insighful from a physical viewpoint, it shines in the perpurbative treatment of relativistic quantum field theories.). Despite the undeniable usefulness and effectiveness of the operatorial formalism in describing quantum systems, general properties end up often being obfuscated by the details of this construction. We will see that results like the no-cloning theorem, important in quantum computation and whose traditional proof is usually deeply rooted in unitary operators and Hilber spaces of quantum states, emerge naturally from the incompatibility with the structural constraints of dagger compact categories. 
+This is not to say that category theory is always suitable for every kind of task. 
+It is important to resist the temptation to overuse category theory when more practical, ``down-to-earth'' encodings might provide superior solutions, or category theory might provide no solutions at all.
+Sometimes, when applying quantum mechanics or computer science concepts to specific systems or programs, the goal is precisely to address the particularities of those systems (\eg, solving a specific differential equation, computing a probability distribution, or implementing an algorithm efficiently).
+In such cases, category theory might not be the best framework for delving into the nitty-gritty details, as these are often intentionally abstracted away and rendered invisible within the categorical construction. 
+However, adopting the perspective of a category theorist provides a complementary viewpoint from which certain properties can be more naturally expressed, explored, and discovered.
 
-This is not to say that category theory is always suitable for all kind of tasks. 
-We need to learn how to resist the pressing temptation of abusing category theory when alternative formulations might provide a better or more effectful alternative.  
-Sometimes, in applying quantum mechanics or programming ideas to specific systems or specific code, our goal is exactly to deal with the particularities of such sustems. 
-Category theory might not be always the right tool to get our hands dirty when it comes to study the nitty gritty details, mostly because those are often intentionally left ``invisible'' in the categorical construction. From this point of view, category theory should not be understood as a replacement of more traditional approaches. 
-Instead, 
-wearing the hat of a category theorist provides a complementary viewpoint where certain properties are more naturally expressed, explored, or discovered. 
 
 \smallskip
 
